test/types/sync/vass/ref-sync-3.good
ref-sync-3.chpl:5: error: unresolved call 'MYPROC(_syncvar(int(64)))'
ref-sync-3.chpl:7: note: candidates are: MYPROC(ref FORMAL: real)
